lythrum/apps/paperless/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-http
  namespace: paperless
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`${SUBDOMAIN_PAPERLESS}.${DOMAIN_INTERNAL}`)
      middlewares:
        - name: redirect-https
          namespace: traefik
      services:
        - name: noop@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-https
  namespace: paperless
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.${DOMAIN_TAILSCALE}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${SUBDOMAIN_PAPERLESS}.${DOMAIN_INTERNAL}`)
      priority: 10
      services:
        - name: paperless
          port: 8000
  tls:
    secretName: paperless-tls
